--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ APP_PORT=8007
 DB_HOST=0.0.0.0
 DB_PORT=3306
 DB_NAME=pkdek
-DB_USER=root
-DB_PASS=27uc87xis
+DB_USER=your_db_user
+DB_PASS=your_db_pass
